Iter01 - добавление простого теста